# jancode

./: .gitignore  README.md  main.py  pyproject.toml
jancode/: directory.py  jancode.py
python/: README.md  main.py  setup.py
python/jancode/: __init__.py  characters.py  check_digit.py  convert.py  create_svg.py  main.py  property.py
tests/: test_jancode.py
